List of user-visible changes of Ratfor Testsuite.

New in 0.9f
-----------
 * Silent rules in the Makefiles are not enabled by default anymore.
 * When specifying to configure the list of test scripts expected to fail
   (through the variable `RAT4_TESTUITE_XFAIL_TESTS'), it's now possible
   to simply use test basenames rather than test fullnames (e.g. `foo'
   raher than `foo.tests').  This shortcut should have been supported also
   previosuly, but didn't worked in practice due to a bug in configure.

New in 0.9e
-----------
 * Now the testsuite should work also with mksh (the MirBSD Korn Shell) on
   Linux systems (previously a bug in the interaction between the GNU C
   Library and mksh prevented this).

New in 0.9d
-----------
 * Now the user can define, at configure time, a list of test cases
   expected to fail (see variable `RAT4_TESTUITE_XFAIL_TESTS').
 * The Ratfor Testsuite have been fixed to work also with gfortran
   version 4.0.  Previously it didn't work because of a misbehaviour in
   gfortran-4.0 which caused the `STOP' builtin in the compiled programs
   to be too much verbose.

New in 0.9c
-----------
 * Fixed a bug in the auxiliary script `timer', which could cause spurious
   intermittent failures with some Korn shells.

New in 0.9b
-----------
 * Now the `configure' scripts checks that the detected Fortran 77
   compiler can create executables (this was not done before).  The check
   is performed even if the compiler is specified by the user himself
   (through the `F77' variable).  The only exception is when F77 is
   defined as "NONE", meaning that no Fortran compiler is to be used by
   the testsuite (this special behaviour was present also in the previous
   versions).
 * Auxiliary program `timer' (used by the testsuite) has been rewritten
   as a shell script, so that no C compiler is required anymore to run
   the Ratfor Testsuite.
 * Added possibility to import mainter-specific rules when using GNU Make,