@@ -210,20 +210,22 @@ Supported shells
 ----------------
 
   The test scripts are written with portability in mind, so that they
-  should run an any decent bourne-compatible shell.
+  should run with any decent Bourne-compatible shell.
 
   However, some care must be used with Zsh, since, when not directly
-  starting in bourne-compatibility mode, it has some incompatibilities
-  in the handling of `$0' which conflict with our usage, and which have
-  no easy workaround.  Thus, if you want to run a test script, say
-  foo.test, with Zsh, you *can't* simply do `zsh foo.test', but you
+  starting in Bourne-compatibility mode, it has some incompatibilities
+  in the handling of `$0' which conflict with our usage.  Our testsuite
+  can automatically work around these incompatibilities when a version
+  4.x or later of Zsh is used, but unfortunately not when an older (3.x)
+  version of Zsh is used.  Thus, if you want to run a test script, say
+  foo.test, with Zsh 3.x, you *can't* simply do `zsh foo.test', but you
   *must* resort to:
     zsh -o no_function_argzero foo.test
 
-  Note that this problem does not occur if zsh is executed through a
-  symlink with `sh' basename, since in that case it immediatly starts
-  in bourne-compatibility mode.  So you should be perfectly safe even
-  having zsh as your /bin/sh.
+  Note that this problem does not occur if Zsh is executed through a
+  symlink with a basename of `sh', since in that case it starts
+  in Bourne compatibility mode.  So you should be perfectly safe when
+  /bin/sh is zsh, even a it's only a 3.x version.
 
 
 Preserving temporary files
